Fix overflow on iphone safari

--- a/public/styles.css
+++ b/public/styles.css
@@ -23,11 +23,14 @@
 /* END Colors */
 
 /* General Styles */
+html, body{
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Courier New", Courier, monospace;
   background-color: var(--offWhite);
   color: var(--black);
-  overflow-x: hidden;
 }
 
     /* Font Sizes */
